--- a/stories/ar/0156_التمساح-الجائع.html
+++ b/stories/ar/0156_التمساح-الجائع.html
@@ -56,7 +56,7 @@ Christian G.<br>العربية</div><div class="pagebreak">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0156/03.jpg" /></p>
 
-<p dir="rtl">…كان يبحث عن الطعام ببطء وهدوء. وفجأة</p>
+<p dir="rtl">كان يبحث عن الطعام ببطء وهدوء. وفجأة…</p>
 
 <div class="pagenum">2</div>
 <p dir="rtl"></div><div class="pagebreak"></p>
