--- a/stories/ar/0156_التمساح-الجائع_slides.html
+++ b/stories/ar/0156_التمساح-الجائع_slides.html
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0156/03.jpg" /></p>
-<p dir="rtl">...كان يبحث عن الطعام ببطء وهدوء. وفجأة</p>
+<p dir="rtl">كان يبحث عن الطعام ببطء وهدوء. وفجأة...</p>
 <center>
 <strong>2</strong>
 </center>
