--- a/stories/fa/0007_در-جستجوی-آب.html
+++ b/stories/fa/0007_در-جستجوی-آب.html
@@ -43,41 +43,41 @@
   <body>
 <div class='cover'><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0007/01.jpg" />
 
-<h1 id="section">در جستجوی آب</h1>
+<h1 dir="rtl" id="section">در جستجوی آب</h1>
 
 Augustine Napagi<br>فارسی</div><div class="pagebreak">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0007/02.jpg" /></p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0007/02.jpg" /></p>
 
-<p>.کجا میتوانم آب پیدا کنم</p>
+<p dir="rtl">کجا میتوانم آب پیدا کنم.</p>
 
 <div class="pagenum">1</div>
-<p></div><div class="pagebreak"></p>
+<p dir="rtl"></div><div class="pagebreak"></p>
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0007/03.jpg" /></p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0007/03.jpg" /></p>
 
-<p>.مقداری آب در ظرف موجود است</p>
+<p dir="rtl">مقداری آب در ظرف موجود است.</p>
 
 <div class="pagenum">2</div>
-<p></div><div class="pagebreak"></p>
+<p dir="rtl"></div><div class="pagebreak"></p>
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0007/04.jpg" /></p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0007/04.jpg" /></p>
 
-<p>.آن خیلی گرم است</p>
+<p dir="rtl">آن خیلی گرم است.</p>
 
 <div class="pagenum">3</div>
-<p></div><div class="pagebreak"></p>
+<p dir="rtl"></div><div class="pagebreak"></p>
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0007/05.jpg" /></p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0007/05.jpg" /></p>
 
-<p>این آب امکان دارد سرد باشد؟</p>
+<p dir="rtl">این آب امکان دارد سرد باشد؟</p>
 
 <div class="pagenum">4</div>
-<p></div><div class="pagebreak"></p>
+<p dir="rtl"></div><div class="pagebreak"></p>
 
-<p><strong>Text:</strong> Augustine Napagi<br /><strong>Illustrations:</strong> Hélder de Paz Alexandre<br /><strong>Translation:</strong> Saeed Nazari<br /><strong>Language:</strong> Persian</p>
-<p>This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p>You can view the original story on the ASP website <a href="http://my.africanstorybook.org/stories/looking-water">here</a>
-<p><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
+<p dir="rtl"><strong>Text:</strong> Augustine Napagi<br /><strong>Illustrations:</strong> Hélder de Paz Alexandre<br /><strong>Translation:</strong> Saeed Nazari<br /><strong>Language:</strong> Persian</p>
+<p dir="rtl">This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p dir="rtl">You can view the original story on the ASP website <a href="http://my.africanstorybook.org/stories/looking-water">here</a>
+<p dir="rtl"><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </p></p></p>
 
 
