--- a/stories/fa/0007_در-جستجوی-آب_slides.html
+++ b/stories/fa/0007_در-جستجوی-آب_slides.html
@@ -88,7 +88,7 @@
 <body>
 
 <section id="در-جستجوی-آب" class="slide level1">
-<h1>در جستجوی آب</h1>
+<h1 dir="rtl">در جستجوی آب</h1>
 <center>
 <img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0007/01.jpg" />
 </center>
@@ -96,8 +96,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0007/02.jpg" /></p>
-<p>.کجا میتوانم آب پیدا کنم</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0007/02.jpg" /></p>
+<p dir="rtl">کجا میتوانم آب پیدا کنم.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0007/03.jpg" /></p>
-<p>.مقداری آب در ظرف موجود است</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0007/03.jpg" /></p>
+<p dir="rtl">مقداری آب در ظرف موجود است.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0007/04.jpg" /></p>
-<p>.آن خیلی گرم است</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0007/04.jpg" /></p>
+<p dir="rtl">آن خیلی گرم است.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0007/05.jpg" /></p>
-<p>این آب امکان دارد سرد باشد؟</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0007/05.jpg" /></p>
+<p dir="rtl">این آب امکان دارد سرد باشد؟</p>
 <center>
 <strong>4</strong>
 </center>
@@ -134,15 +134,15 @@
 
 <h2 id="در-جستجوی-آب-1">در جستجوی آب</h2>
 <strong>Text:</strong> Augustine Napagi<br> <strong>Illustrations:</strong> Hélder de Paz Alexandre<br> <strong>Translation:</strong> Saeed Nazari<br> <strong>Language:</strong> Persian<br>
-<p>
+<p dir="rtl">
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
-<p>
+<p dir="rtl">
 You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/looking-water'>here</a>
-<p><div class="license">
+<p dir="rtl"><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
 
-<p><center><div class="license">
+<p dir="rtl"><center><div class="license">
 <a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a>.
 </div></center>
 
