--- a/stories/fa/0192_امید-مانند-ساندویچ-کره-بادام-زمینی-است_slides.html
+++ b/stories/fa/0192_امید-مانند-ساندویچ-کره-بادام-زمینی-است_slides.html
@@ -88,7 +88,7 @@
 <body>
 
 <section id="امید-مانند-ساندویچ-کره-بادام-زمینی-است" class="slide level1">
-<h1>امید مانند ساندویچ کره بادام زمینی است</h1>
+<h1 dir="rtl">امید مانند ساندویچ کره بادام زمینی است</h1>
 <center>
 <img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0192/01.jpg" />
 </center>
@@ -96,8 +96,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0192/02.jpg" /></p>
-<p>امید مانند لایه نازک کره بادام زمینی است که روی نان معضلات حکومت مالیده شده و تنها گرسنه ای را به اندازه بیداری سیر میکند</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0192/02.jpg" /></p>
+<p dir="rtl">امید مانند لایه نازک کره بادام زمینی است که روی نان معضلات حکومت مالیده شده و تنها گرسنه ای را به اندازه بیداری سیر میکند</p>
 <center>
 <strong>1</strong>
 </center>
@@ -107,15 +107,15 @@
 
 <h2 id="امید-مانند-ساندویچ-کره-بادام-زمینی-است-1">امید مانند ساندویچ کره بادام زمینی است</h2>
 <strong>Text:</strong> Johanna Kistner<br> <strong>Illustrations:</strong> Johanna Kistner<br> <strong>Translation:</strong> Saeed Nazari<br> <strong>Language:</strong> Persian<br>
-<p>
+<p dir="rtl">
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
-<p>
+<p dir="rtl">
 You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/hope-peanut-butter-sandwich'>here</a>
-<p><div class="license">
+<p dir="rtl"><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
 
-<p><center><div class="license">
+<p dir="rtl"><center><div class="license">
 <a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a>.
 </div></center>
 
