--- a/stories/fa/0253_کتاب-عکس-دار.html
+++ b/stories/fa/0253_کتاب-عکس-دار.html
@@ -43,41 +43,41 @@
   <body>
 <div class='cover'><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0253/01.jpg" />
 
-<h1 id="section">کتاب عکس دار</h1>
+<h1 dir="rtl" id="section">کتاب عکس دار</h1>
 
 Oku Modesto<br>فارسی</div><div class="pagebreak">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0253/02.jpg" /></p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0253/02.jpg" /></p>
 
-<p>دختر</p>
+<p dir="rtl">دختر</p>
 
 <div class="pagenum">1</div>
-<p></div><div class="pagebreak"></p>
+<p dir="rtl"></div><div class="pagebreak"></p>
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0253/03.jpg" /></p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0253/03.jpg" /></p>
 
-<p>پرنده</p>
+<p dir="rtl">پرنده</p>
 
 <div class="pagenum">2</div>
-<p></div><div class="pagebreak"></p>
+<p dir="rtl"></div><div class="pagebreak"></p>
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0253/04.jpg" /></p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0253/04.jpg" /></p>
 
-<p>شیر</p>
+<p dir="rtl">شیر</p>
 
 <div class="pagenum">3</div>
-<p></div><div class="pagebreak"></p>
+<p dir="rtl"></div><div class="pagebreak"></p>
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0253/05.jpg" /></p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0253/05.jpg" /></p>
 
-<p>گربه</p>
+<p dir="rtl">گربه</p>
 
 <div class="pagenum">4</div>
-<p></div><div class="pagebreak"></p>
+<p dir="rtl"></div><div class="pagebreak"></p>
 
-<p><strong>Text:</strong> Oku Modesto<br /><strong>Illustrations:</strong> Rob Owen, Marleen Visser, Katrien Coetzer, Wiehan de Jager, Karen Lilje, Catherine Groenewald, Alice Toich<br /><strong>Translation:</strong> ifazel<br /><strong>Language:</strong> Persian</p>
-<p>This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p>You can view the original story on the ASP website <a href="http://my.africanstorybook.org/stories/my-picture-book-0">here</a>
-<p><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
+<p dir="rtl"><strong>Text:</strong> Oku Modesto<br /><strong>Illustrations:</strong> Rob Owen, Marleen Visser, Katrien Coetzer, Wiehan de Jager, Karen Lilje, Catherine Groenewald, Alice Toich<br /><strong>Translation:</strong> ifazel<br /><strong>Language:</strong> Persian</p>
+<p dir="rtl">This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p dir="rtl">You can view the original story on the ASP website <a href="http://my.africanstorybook.org/stories/my-picture-book-0">here</a>
+<p dir="rtl"><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </p></p></p>
 
 
