--- a/stories/pa/0066_ਨੌਜ਼ੀਬਿੱਲ-ਅਤੇ-ਤਿੰਨ-ਵਾਲ.html
+++ b/stories/pa/0066_ਨੌਜ਼ੀਬਿੱਲ-ਅਤੇ-ਤਿੰਨ-ਵਾਲ.html
@@ -84,7 +84,7 @@ Tessa Welch<br>ਪੰਜਾਬੀ</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/07.jpg" /></p>
 
-<p>ਬਹੁਤ ਦੂਰ ਇੱਕ ਝੋਪੜੀ ਵਿੱਚੋਂ ਉਸਨੇ ਚਾਨਣ ਆਉਂਦਾ ਦੇਖਿਆ। ਉਹ ਉਸ ਵੱਲ ਛੇਤੀ ਨਾਲ ਗਈ ਅਤੇ ਦਰਵਾਜ਼ਾ ਖੜਕਾਇਆ।</p>
+<p>ਬਹੁਤ ਦੂਰ ਇੱਕ ਝੋਂਪੜੀ ਵਿੱਚੋਂ ਉਸਨੇ ਚਾਨਣ ਆਉਂਦਾ ਦੇਖਿਆ। ਉਹ ਉਸ ਵੱਲ ਛੇਤੀ ਨਾਲ ਗਈ ਅਤੇ ਦਰਵਾਜ਼ਾ ਖੜਕਾਇਆ।</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
@@ -119,7 +119,7 @@ Tessa Welch<br>ਪੰਜਾਬੀ</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/12.jpg" /></p>
 
-<p>ਜਦੋਂ ਹੀ ਕੁੱਤਾ ਗਿਆ, ਨੌਜ਼ੀਬਿੱਲ ਨੇ ਉਸ ਦੇ ਸਿਰ ਵਿੱਚੋਂ ਤਿੰਨ ਵਾਲ ਲਏ। ਉਸ ਨੇ ਇੱਕ ਵਾਲ ਮੰਜੇ ਹੇਠ ਰੱਖਿਆ, ਇੱਕ ਦਰਵਾਜ਼ੇ ਦੇ ਪਿੱਛੇ ਅਤੇ ਇੱਕ ਕਰਾਲ ਦੇ ਵਿੱਚ। ਫਿਰ ਜਿੰਨ੍ਹੀ ਛੇਤੀ ਹੋ ਸਕੇ ਉਹ ਘਰ ਵੱਲ ਨੂੰ ਭੱਜੀ ਗਈ।</p>
+<p>ਜਦੋਂ ਹੀ ਕੁੱਤਾ ਗਿਆ, ਨੌਜ਼ੀਬਿੱਲ ਨੇ ਉਸ ਦੇ ਸਿਰ ਵਿੱਚੋਂ ਤਿੰਨ ਵਾਲ ਲਏ। ਉਸ ਨੇ ਇੱਕ ਵਾਲ ਮੰਜੇ ਹੇਠ ਰੱਖਿਆ, ਇੱਕ ਦਰਵਾਜ਼ੇ ਦੇ ਪਿੱਛੇ ਅਤੇ ਇੱਕ ਕਰਾਲ ਦੇ ਵਿੱਚ। ਫਿਰ ਜਿੰਨ੍ਹੀ ਛੇਤੀ ਹੋ ਸਕਿਆ ਉਹ ਘਰ ਵੱਲ ਨੂੰ ਭੱਜੀ ਗਈ।</p>
 
 <div class="pagenum">11</div>
 <p></div><div class="pagebreak"></p>
