--- a/stories/fa/0049_رنگین-کمان_slides.html
+++ b/stories/fa/0049_رنگین-کمان_slides.html
@@ -88,7 +88,7 @@
 <body>
 
 <section id="رنگین-کمان" class="slide level1">
-<h1>رنگین کمان</h1>
+<h1 dir="rtl">رنگین کمان</h1>
 <center>
 <img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0049/01.jpg" />
 </center>
@@ -96,8 +96,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0049/02.jpg" /></p>
-<p>.رنگ های فراوانی دارد</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0049/02.jpg" /></p>
+<p dir="rtl">رنگ های فراوانی دارد.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0049/03.jpg" /></p>
-<p>.آنها با هم ظاهر میشوند</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0049/03.jpg" /></p>
+<p dir="rtl">آنها با هم ظاهر میشوند.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0049/04.jpg" /></p>
-<p>.تو نارنجی می بینی</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0049/04.jpg" /></p>
+<p dir="rtl">تو نارنجی می بینی.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0049/05.jpg" /></p>
-<p>.تو آبی می بینی</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0049/05.jpg" /></p>
+<p dir="rtl">تو آبی می بینی.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0049/06.jpg" /></p>
-<p>.تو قرمز می بینی</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0049/06.jpg" /></p>
+<p dir="rtl">تو قرمز می بینی.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0049/07.jpg" /></p>
-<p>.آن رنگ ها زیبا هستند</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0049/07.jpg" /></p>
+<p dir="rtl">آن رنگ ها زیبا هستند.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -152,15 +152,15 @@
 
 <h2 id="رنگین-کمان-1">رنگین کمان</h2>
 <strong>Text:</strong> Ursula Nafula<br> <strong>Illustrations:</strong> Catherine Groenewald, Wiehan de Jager<br> <strong>Translation:</strong> Saeed Nazari<br> <strong>Language:</strong> Persian<br>
-<p>
+<p dir="rtl">
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
-<p>
+<p dir="rtl">
 You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/rainbow'>here</a>
-<p><div class="license">
+<p dir="rtl"><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
 
-<p><center><div class="license">
+<p dir="rtl"><center><div class="license">
 <a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a>.
 </div></center>
 
