--- a/stories/fa/0093_پسر-بچه من_slides.html
+++ b/stories/fa/0093_پسر-بچه من_slides.html
@@ -88,7 +88,7 @@
 <body>
 
 <section id="پسر-بچه-من" class="slide level1">
-<h1>پسر بچه من</h1>
+<h1 dir="rtl">پسر بچه من</h1>
 <center>
 <img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0093/01.jpg" />
 </center>
@@ -96,8 +96,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0093/02.jpg" /></p>
-<p>.پسر بچه من جان فرانسیس است</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0093/02.jpg" /></p>
+<p dir="rtl">.پسر بچه من جان فرانسیس است</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0093/03.jpg" /></p>
-<p>.او موزهای زرد و سیب ها را دوست دارد</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0093/03.jpg" /></p>
+<p dir="rtl">.او موزهای زرد و سیب ها را دوست دارد</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0093/04.jpg" /></p>
-<p>.بعد از صرف صبحانه، او با دوستش بازی میکند</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0093/04.jpg" /></p>
+<p dir="rtl">.بعد از صرف صبحانه، او با دوستش بازی میکند</p>
 <center>
 <strong>3</strong>
 </center>
@@ -125,15 +125,15 @@
 
 <h2 id="پسر-بچه-من-1">پسر بچه من</h2>
 <strong>Text:</strong> Cissy Namugerwa, Nanyonga Allen<br> <strong>Illustrations:</strong> Genevieve Terblanche, Melany Pietersen, Catherine Groenewald, Marion Drew, Mlungisi Dlamini<br> <strong>Translation:</strong> Saeed Nazari<br> <strong>Language:</strong> Persian<br>
-<p>
+<p dir="rtl">
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
-<p>
+<p dir="rtl">
 You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/my-baby-boy'>here</a>
-<p><div class="license">
+<p dir="rtl"><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
 
-<p><center><div class="license">
+<p dir="rtl"><center><div class="license">
 <a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a>.
 </div></center>
 
