--- a/stories/fa/0127_بازی‌های-گوناگون.html
+++ b/stories/fa/0127_بازی‌های-گوناگون.html
@@ -43,41 +43,41 @@
   <body>
 <div class='cover'><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0127/01.jpg" />
 
-<h1 id="section">بازی‌های گوناگون</h1>
+<h1 dir="rtl" id="section">بازی‌های گوناگون</h1>
 
 Ajarubo Philiam<br>فارسی</div><div class="pagebreak">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0127/02.jpg" /></p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0127/02.jpg" /></p>
 
-<p>طناب زدن</p>
+<p dir="rtl">طناب زدن</p>
 
 <div class="pagenum">1</div>
-<p></div><div class="pagebreak"></p>
+<p dir="rtl"></div><div class="pagebreak"></p>
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0127/03.jpg" /></p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0127/03.jpg" /></p>
 
-<p>دویدن</p>
+<p dir="rtl">دویدن</p>
 
 <div class="pagenum">2</div>
-<p></div><div class="pagebreak"></p>
+<p dir="rtl"></div><div class="pagebreak"></p>
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0127/04.jpg" /></p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0127/04.jpg" /></p>
 
-<p>توپ بازی</p>
+<p dir="rtl">توپ بازی</p>
 
 <div class="pagenum">3</div>
-<p></div><div class="pagebreak"></p>
+<p dir="rtl"></div><div class="pagebreak"></p>
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0127/05.jpg" /></p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0127/05.jpg" /></p>
 
-<p>پریدن</p>
+<p dir="rtl">پریدن</p>
 
 <div class="pagenum">4</div>
-<p></div><div class="pagebreak"></p>
+<p dir="rtl"></div><div class="pagebreak"></p>
 
-<p><strong>Text:</strong> Ajarubo Philiam<br /><strong>Illustrations:</strong> Vusi Malindi, Marion Drew, Benjamin Mitchley, Joseph Ejoyi, Mlungisi Dlamini, Kathy Arbuckle<br /><strong>Translation:</strong> Saeed Nazari<br /><strong>Language:</strong> Persian</p>
-<p>This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p>You can view the original story on the ASP website <a href="http://my.africanstorybook.org/stories/different-plays">here</a>
-<p><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
+<p dir="rtl"><strong>Text:</strong> Ajarubo Philiam<br /><strong>Illustrations:</strong> Vusi Malindi, Marion Drew, Benjamin Mitchley, Joseph Ejoyi, Mlungisi Dlamini, Kathy Arbuckle<br /><strong>Translation:</strong> Saeed Nazari<br /><strong>Language:</strong> Persian</p>
+<p dir="rtl">This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p dir="rtl">You can view the original story on the ASP website <a href="http://my.africanstorybook.org/stories/different-plays">here</a>
+<p dir="rtl"><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </p></p></p>
 
 
