--- a/stories/fa/0127_بازی‌های-گوناگون_slides.html
+++ b/stories/fa/0127_بازی‌های-گوناگون_slides.html
@@ -88,7 +88,7 @@
 <body>
 
 <section id="بازیهای-گوناگون" class="slide level1">
-<h1>بازی‌های گوناگون</h1>
+<h1 dir="rtl">بازی‌های گوناگون</h1>
 <center>
 <img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0127/01.jpg" />
 </center>
@@ -96,8 +96,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0127/02.jpg" /></p>
-<p>طناب زدن</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0127/02.jpg" /></p>
+<p dir="rtl">طناب زدن</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0127/03.jpg" /></p>
-<p>دویدن</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0127/03.jpg" /></p>
+<p dir="rtl">دویدن</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0127/04.jpg" /></p>
-<p>توپ بازی</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0127/04.jpg" /></p>
+<p dir="rtl">توپ بازی</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0127/05.jpg" /></p>
-<p>پریدن</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0127/05.jpg" /></p>
+<p dir="rtl">پریدن</p>
 <center>
 <strong>4</strong>
 </center>
@@ -134,15 +134,15 @@
 
 <h2 id="بازیهای-گوناگون-1">بازی‌های گوناگون</h2>
 <strong>Text:</strong> Ajarubo Philiam<br> <strong>Illustrations:</strong> Vusi Malindi, Marion Drew, Benjamin Mitchley, Joseph Ejoyi, Mlungisi Dlamini, Kathy Arbuckle<br> <strong>Translation:</strong> Saeed Nazari<br> <strong>Language:</strong> Persian<br>
-<p>
+<p dir="rtl">
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
-<p>
+<p dir="rtl">
 You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/different-plays'>here</a>
-<p><div class="license">
+<p dir="rtl"><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
 
-<p><center><div class="license">
+<p dir="rtl"><center><div class="license">
 <a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a>.
 </div></center>
 
