--- a/stories/fa/0192_امید-مانند-ساندویچ-کره-بادام-زمینی-است.html
+++ b/stories/fa/0192_امید-مانند-ساندویچ-کره-بادام-زمینی-است.html
@@ -43,20 +43,20 @@
   <body>
 <div class='cover'><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0192/01.jpg" />
 
-<h1 id="section">امید مانند ساندویچ کره بادام زمینی است</h1>
+<h1 dir="rtl" id="section">امید مانند ساندویچ کره بادام زمینی است</h1>
 
 Johanna Kistner<br>فارسی</div><div class="pagebreak">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0192/02.jpg" /></p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0192/02.jpg" /></p>
 
-<p>امید مانند لایه نازک کره بادام زمینی است که روی نان معضلات حکومت مالیده شده و تنها گرسنه ای را به اندازه بیداری سیر میکند</p>
+<p dir="rtl">امید مانند لایه نازک کره بادام زمینی است که روی نان معضلات حکومت مالیده شده و تنها گرسنه ای را به اندازه بیداری سیر میکند</p>
 
 <div class="pagenum">1</div>
-<p></div><div class="pagebreak"></p>
+<p dir="rtl"></div><div class="pagebreak"></p>
 
-<p><strong>Text:</strong> Johanna Kistner<br /><strong>Illustrations:</strong> Johanna Kistner<br /><strong>Translation:</strong> Saeed Nazari<br /><strong>Language:</strong> Persian</p>
-<p>This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p>You can view the original story on the ASP website <a href="http://my.africanstorybook.org/stories/hope-peanut-butter-sandwich">here</a>
-<p><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
+<p dir="rtl"><strong>Text:</strong> Johanna Kistner<br /><strong>Illustrations:</strong> Johanna Kistner<br /><strong>Translation:</strong> Saeed Nazari<br /><strong>Language:</strong> Persian</p>
+<p dir="rtl">This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p dir="rtl">You can view the original story on the ASP website <a href="http://my.africanstorybook.org/stories/hope-peanut-butter-sandwich">here</a>
+<p dir="rtl"><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </p></p></p>
 
 
