--- a/stories/fa/0302_آتش.html
+++ b/stories/fa/0302_آتش.html
@@ -43,69 +43,69 @@
   <body>
 <div class='cover'><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/01.jpg" />
 
-<h1 id="section">آتش</h1>
+<h1 dir="rtl" id="section">آتش</h1>
 
 Deborah Namugosa, Beatrice Nabune, Alison Tukei, Rose Sabano<br>فارسی</div><div class="pagebreak">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/02.jpg" /></p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/02.jpg" /></p>
 
-<p>!نگاه کن، آتش</p>
+<p dir="rtl">!نگاه کن، آتش</p>
 
 <div class="pagenum">1</div>
-<p></div><div class="pagebreak"></p>
+<p dir="rtl"></div><div class="pagebreak"></p>
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/03.jpg" /></p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/03.jpg" /></p>
 
-<p>.آتش میسوزاند</p>
+<p dir="rtl">آتش میسوزاند.</p>
 
 <div class="pagenum">2</div>
-<p></div><div class="pagebreak"></p>
+<p dir="rtl"></div><div class="pagebreak"></p>
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/04.jpg" /></p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/04.jpg" /></p>
 
-<p>.آتش می‌پزد</p>
+<p dir="rtl">آتش می‌پزد.</p>
 
 <div class="pagenum">3</div>
-<p></div><div class="pagebreak"></p>
+<p dir="rtl"></div><div class="pagebreak"></p>
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/05.jpg" /></p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/05.jpg" /></p>
 
-<p>.آتش گرما میدهد</p>
+<p dir="rtl">آتش گرما میدهد.</p>
 
 <div class="pagenum">4</div>
-<p></div><div class="pagebreak"></p>
+<p dir="rtl"></div><div class="pagebreak"></p>
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/06.jpg" /></p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/06.jpg" /></p>
 
-<p>.آتش نور میدهد</p>
+<p dir="rtl">آتش نور میدهد.</p>
 
 <div class="pagenum">5</div>
-<p></div><div class="pagebreak"></p>
+<p dir="rtl"></div><div class="pagebreak"></p>
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/07.jpg" /></p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/07.jpg" /></p>
 
-<p>!نگاه کن، آتش</p>
+<p dir="rtl">!نگاه کن، آتش</p>
 
 <div class="pagenum">6</div>
-<p></div><div class="pagebreak"></p>
+<p dir="rtl"></div><div class="pagebreak"></p>
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/08.jpg" /></p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/08.jpg" /></p>
 
-<p>.آتش شگفت انگیز است</p>
+<p dir="rtl">آتش شگفت انگیز است.</p>
 
 <div class="pagenum">7</div>
-<p></div><div class="pagebreak"></p>
+<p dir="rtl"></div><div class="pagebreak"></p>
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/09.jpg" /></p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/09.jpg" /></p>
 
-<p>.آتش سهمگین است</p>
+<p dir="rtl">آتش سهمگین است.</p>
 
 <div class="pagenum">8</div>
-<p></div><div class="pagebreak"></p>
+<p dir="rtl"></div><div class="pagebreak"></p>
 
-<p><strong>Text:</strong> Deborah Namugosa, Beatrice Nabune, Alison Tukei, Rose Sabano<br /><strong>Illustrations:</strong> Rob Owen<br /><strong>Translation:</strong> Saeed Nazari<br /><strong>Language:</strong> Persian</p>
-<p>This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p>You can view the original story on the ASP website <a href="http://my.africanstorybook.org/stories/fire">here</a>
-<p><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
+<p dir="rtl"><strong>Text:</strong> Deborah Namugosa, Beatrice Nabune, Alison Tukei, Rose Sabano<br /><strong>Illustrations:</strong> Rob Owen<br /><strong>Translation:</strong> Saeed Nazari<br /><strong>Language:</strong> Persian</p>
+<p dir="rtl">This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p dir="rtl">You can view the original story on the ASP website <a href="http://my.africanstorybook.org/stories/fire">here</a>
+<p dir="rtl"><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </p></p></p>
 
 
