--- a/stories/fa/0309_کوچک-و-بزرگ_slides.html
+++ b/stories/fa/0309_کوچک-و-بزرگ_slides.html
@@ -88,7 +88,7 @@
 <body>
 
 <section id="کوچک-و-بزرگ" class="slide level1">
-<h1>کوچک و بزرگ</h1>
+<h1 dir="rtl">کوچک و بزرگ</h1>
 <center>
 <img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0309/01.jpg" />
 </center>
@@ -96,8 +96,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0309/02.jpg" /></p>
-<p>کلاه کوچک، کلاه بزرگ</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0309/02.jpg" /></p>
+<p dir="rtl">کلاه کوچک، کلاه بزرگ</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,7 +105,7 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0309/03.jpg" /></p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0309/03.jpg" /></p>
 <center>
 <strong>2</strong>
 </center>
@@ -113,8 +113,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0309/04.jpg" /></p>
-<p>دست های کوچک، دست های بزرگ</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0309/04.jpg" /></p>
+<p dir="rtl">دست های کوچک، دست های بزرگ</p>
 <center>
 <strong>3</strong>
 </center>
@@ -122,7 +122,7 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0309/05.jpg" /></p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0309/05.jpg" /></p>
 <center>
 <strong>4</strong>
 </center>
@@ -130,8 +130,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0309/06.jpg" /></p>
-<p>بزغاله کوچک، بزغاله بزرگ</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0309/06.jpg" /></p>
+<p dir="rtl">بزغاله کوچک، بزغاله بزرگ</p>
 <center>
 <strong>5</strong>
 </center>
@@ -139,7 +139,7 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0309/07.jpg" /></p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0309/07.jpg" /></p>
 <center>
 <strong>6</strong>
 </center>
@@ -147,8 +147,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0309/08.jpg" /></p>
-<p>کتاب کوچک، کتاب بزرگ</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0309/08.jpg" /></p>
+<p dir="rtl">کتاب کوچک، کتاب بزرگ</p>
 <center>
 <strong>7</strong>
 </center>
@@ -156,7 +156,7 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0309/09.jpg" /></p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0309/09.jpg" /></p>
 <center>
 <strong>8</strong>
 </center>
@@ -164,8 +164,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0309/10.jpg" /></p>
-<p>لبخند کوچک، لبخند بزرگ</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0309/10.jpg" /></p>
+<p dir="rtl">لبخند کوچک، لبخند بزرگ</p>
 <center>
 <strong>9</strong>
 </center>
@@ -173,7 +173,7 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0309/11.jpg" /></p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0309/11.jpg" /></p>
 <center>
 <strong>10</strong>
 </center>
@@ -181,8 +181,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0309/12.jpg" /></p>
-<p>پایان</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0309/12.jpg" /></p>
+<p dir="rtl">پایان</p>
 <center>
 <strong>11</strong>
 </center>
@@ -192,15 +192,15 @@
 
 <h2 id="کوچک-و-بزرگ-1">کوچک و بزرگ</h2>
 <strong>Text:</strong> Carole Bloch<br> <strong>Illustrations:</strong> Vian Oelofsen<br> <strong>Translation:</strong> Saeed Nazari<br> <strong>Language:</strong> Persian<br>
-<p>
+<p dir="rtl">
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
-<p>
+<p dir="rtl">
 You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/little-and-big'>here</a>
-<p><div class="license">
+<p dir="rtl"><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
 
-<p><center><div class="license">
+<p dir="rtl"><center><div class="license">
 <a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/">Creative Commons Attribution-NonCommercial 3.0 Unported License</a>.
 </div></center>
 
