--- a/stories/pa/0066_ਨੌਜ਼ੀਬਿੱਲ-ਅਤੇ-ਤਿੰਨ-ਵਾਲ_slides.html
+++ b/stories/pa/0066_ਨੌਜ਼ੀਬਿੱਲ-ਅਤੇ-ਤਿੰਨ-ਵਾਲ_slides.html
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/07.jpg" /></p>
-<p>ਬਹੁਤ ਦੂਰ ਇੱਕ ਝੋਪੜੀ ਵਿੱਚੋਂ ਉਸਨੇ ਚਾਨਣ ਆਉਂਦਾ ਦੇਖਿਆ। ਉਹ ਉਸ ਵੱਲ ਛੇਤੀ ਨਾਲ ਗਈ ਅਤੇ ਦਰਵਾਜ਼ਾ ਖੜਕਾਇਆ।</p>
+<p>ਬਹੁਤ ਦੂਰ ਇੱਕ ਝੋਂਪੜੀ ਵਿੱਚੋਂ ਉਸਨੇ ਚਾਨਣ ਆਉਂਦਾ ਦੇਖਿਆ। ਉਹ ਉਸ ਵੱਲ ਛੇਤੀ ਨਾਲ ਗਈ ਅਤੇ ਦਰਵਾਜ਼ਾ ਖੜਕਾਇਆ।</p>
 <center>
 <strong>6</strong>
 </center>
@@ -187,7 +187,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/12.jpg" /></p>
-<p>ਜਦੋਂ ਹੀ ਕੁੱਤਾ ਗਿਆ, ਨੌਜ਼ੀਬਿੱਲ ਨੇ ਉਸ ਦੇ ਸਿਰ ਵਿੱਚੋਂ ਤਿੰਨ ਵਾਲ ਲਏ। ਉਸ ਨੇ ਇੱਕ ਵਾਲ ਮੰਜੇ ਹੇਠ ਰੱਖਿਆ, ਇੱਕ ਦਰਵਾਜ਼ੇ ਦੇ ਪਿੱਛੇ ਅਤੇ ਇੱਕ ਕਰਾਲ ਦੇ ਵਿੱਚ। ਫਿਰ ਜਿੰਨ੍ਹੀ ਛੇਤੀ ਹੋ ਸਕੇ ਉਹ ਘਰ ਵੱਲ ਨੂੰ ਭੱਜੀ ਗਈ।</p>
+<p>ਜਦੋਂ ਹੀ ਕੁੱਤਾ ਗਿਆ, ਨੌਜ਼ੀਬਿੱਲ ਨੇ ਉਸ ਦੇ ਸਿਰ ਵਿੱਚੋਂ ਤਿੰਨ ਵਾਲ ਲਏ। ਉਸ ਨੇ ਇੱਕ ਵਾਲ ਮੰਜੇ ਹੇਠ ਰੱਖਿਆ, ਇੱਕ ਦਰਵਾਜ਼ੇ ਦੇ ਪਿੱਛੇ ਅਤੇ ਇੱਕ ਕਰਾਲ ਦੇ ਵਿੱਚ। ਫਿਰ ਜਿੰਨ੍ਹੀ ਛੇਤੀ ਹੋ ਸਕਿਆ ਉਹ ਘਰ ਵੱਲ ਨੂੰ ਭੱਜੀ ਗਈ।</p>
 <center>
 <strong>11</strong>
 </center>
