--- a/stories/zh/0073_数数_slides.html
+++ b/stories/zh/0073_数数_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>مادر بزرگ من - Global African Storybook</title>
+  <title>数数 - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="مادر-بزرگ-من" class="slide level1">
-<h1 dir="rtl">مادر بزرگ من</h1>
+<section id="数数" class="slide level1">
+<h1>数数</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0130/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0073/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0130/02.jpg" /></p>
-<p dir="rtl">مادر بزرگ به من سلام میکند.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0073/02.jpg" /></p>
+<p>一头大象去喝水。</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0130/03.jpg" /></p>
-<p dir="rtl">ما دویدیم تا به گاو مادر بزرگ سربزنیم.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0073/03.jpg" /></p>
+<p>两只长颈鹿去喝水。</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0130/04.jpg" /></p>
-<p dir="rtl">من به او رسیدم.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0073/04.jpg" /></p>
+<p>这里有三头水牛和四只鸟，全部都要去喝水。</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0130/05.jpg" /></p>
-<p dir="rtl">من از دست او فرار کردم.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0073/05.jpg" /></p>
+<p>五只高角羚和六只疣猪去喝水。</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0130/06.jpg" /></p>
-<p dir="rtl">مادر بزرگ خیلی خسته شد.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0073/06.jpg" /></p>
+<p>水中有七只青蛙，也有八条鱼。</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,18 +141,45 @@
 </section>
 <section class="slide level1">
 
-<h2 id="مادر-بزرگ-من-1">مادر بزرگ من</h2>
-<strong>Text:</strong> Augustine Napagi<br> <strong>Illustrations:</strong> Ingrid Schechter<br> <strong>Translation:</strong> Saeed Nazari<br> <strong>Language:</strong> Persian<br>
-<p dir="rtl">
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0073/07.jpg" /></p>
+<p>九匹斑馬去喝水。</p>
+<center>
+<strong>6</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0073/08.jpg" /></p>
+<p>一头狮子也来喝水。</p>
+<center>
+<strong>7</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0073/09.jpg" /></p>
+<p>还有谁敢在这里喝下去？</p>
+<center>
+<strong>8</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<h2 id="数数-1">数数</h2>
+<strong>作者:</strong> Clare Verbeek, Thembani Dladla and Zanele Buthelezi<br> <strong>绘画:</strong> Gay Galsworthy<br> <strong>翻译:</strong> dohliam<br> <strong>语言:</strong> 中文<br>
+<p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
-<p dir="rtl">
-You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/my-grandma'>here</a>
-<p dir="rtl"><div class="license">
+<p>
+You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/counting'>here</a>
+<p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
 
-<p dir="rtl"><center><div class="license">
-<a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a>.
+<p><center><div class="license">
+<a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/">Creative Commons Attribution-NonCommercial 3.0 Unported License</a>.
 </div></center>
 
 
